# dabbler-ai-orchestration

./: .gitignore  AGENTS.md  BATON.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  README.md  coding-assistant-adapter-spec.md  ctmpverify_026_s2.py  pyproject.toml  pytest.ini
.github/workflows/: publish-vscode.yml  release.yml  test.yml
ai-router/: __init__.py  backfill_session_state.py  capacity.py  close_lock.py  close_out.py  close_session.py  config.py  cost_report.py  disposition.py  dump_session_state_schema.py  gate_checks.py  heartbeat_status.py  metrics.py  orchestrator_role.py  providers.py  queue_db.py  queue_status.py  reconciler.py  report.py  role_status.py  router-config.yaml  session_events.py  session_lifecycle.py  session_log.py  session_state.py  utils.py  verification.py  verifier_role.py
ai-router/docs/: close-out.md  two-cli-workflow.md
ai-router/prompt-templates/: verification.md
ai-router/schemas/: disposition.schema.json
ai-router/tests/: conftest.py  test_capacity.py  test_close_lock.py  test_close_out.py  test_close_session_integration.py  test_close_session_session4.py  test_close_session_skeleton.py  test_close_session_verification_wait.py  test_cost_report.py  test_disposition.py  test_dump_session_state_schema.py  test_failure_injection.py  test_heartbeat_status.py  test_mark_session_complete_gate.py  test_mode_aware_route.py  test_orchestrator_role.py  test_print_session_set_status_cancelled.py  test_queue_db.py  test_queue_status.py  test_read_status.py  test_restart_role.py  test_role_status.py  test_session_events.py  test_session_lifecycle.py  test_session_state_backfill.py  test_session_state_v2.py  test_verifier_role.py  test_verifier_run_verification.py
ai_router/: CHANGELOG.md  __init__.py  backfill_session_state.py  blast_radius.py  budget.yaml  change_verification_mode.py  cite_lessons.py  cli_transport.py  close_backstop.py  close_out.py  close_session.py  config.py  consensus-decisions.jsonl  consensus_journal.py  copilot_catalog.py  copilot_preflight.py  cost_report.py  daemon_pid.py  dedicated_verification.py  disposition.py  dual_surface_verify.py  external_verification.py  gate_checks.py  guidance_config.py  guidance_meta.py  guidance_report.py  guidance_search.py  local_only.py  metrics.py  migrate_router_config.py  migrate_session_state.py  models.py  narration.py  notifications.py  orchestrator_identity.py  orchestrator_role.py  path_aware_critique.py  pending_verification.py  probe_templates.py  progress.py  (+28 more)
ai_router/docs/: close-out.md  pull-verifier.md  two-cli-workflow.md
ai_router/joiner/: coverage.py  parsers.py  schema.py
ai_router/prompt-templates/: greenfield-matrix-addendum.md  system-prompts.md  task-prompts.md  verification.md
ai_router/schemas/: disposition.schema.json  session-state.schema.json
ai_router/scripts/: drift_guard.py  dump_session_state_schema.py  test_dump_session_state_schema.py
ai_router/tests/: conftest.py  stamp_fixtures.py  test_blast_radius.py  test_blocking_classifier.py  test_capacity.py  test_capacity_signal_wiring.py  test_change_verification_mode.py  test_chatsessionid_writer.py  test_checkout_writer.py  test_cite_lessons.py  test_cli_transport.py  test_close_backstop.py  test_close_out.py  test_close_out_e2e.py  test_close_session_integration.py  test_close_session_session4.py  test_close_session_skeleton.py  test_close_session_snapshot_flip.py  test_close_session_verdict.py  test_cold_start_acceptance.py  test_config.py  test_consensus_journal.py  test_contract_gate_close.py  test_copilot_catalog.py  test_copilot_preflight.py  test_copilot_routing_integration.py  test_cost_report.py  test_cost_report_outsource_last.py  test_critical_eval_ss1_phase0.py  test_cross_provider_gate_extension.py  test_dabbler_launch_join_e2e.py  test_daemon_pid.py  test_decision_consensus_schema.py  test_dedicated_verification.py  test_dedicated_verification_close_gate.py  test_disposition.py  test_drift_guard.py  test_dual_surface_s2.py  test_external_verification_parser.py  test_failure_injection.py  (+68 more)
docs/: adoption-bootstrap.md  ai-led-session-workflow.md  contract-gate.md  copilot-seat-setup-checklist.md  cross-repo-checkout-notice.md  cross-repo-guidance-lifecycle-notice.md  cross-repo-hook-retirement-notice.md  cross-repo-lightweight-notice.md  cross-repo-migration-guard-notice.md  disposition-schema.md  dual-surface-comparison-schema-example.json  dual-surface-comparison.schema.json  greenfield-adjudication-rubric.md  greenfield-matrix-protocol.md  guidance-lifecycle.md  guidance-slimming-playbook.md  module-reorganization.md  narration-templates.md  orchestrator-marker-schema.md  path-aware-critique-schema-example.json  path-aware-critique-schema.md  path-aware-critique.schema.json  quick-start.md  remediation-backlog-schema.md  remediation-report-schema.md  repository-reference.md  session-constitution.md  session-issues-schema-example.json  session-issues-schema.md  session-issues.schema.json  session-state-schema-example.json  session-state-schema-example.md  session-state-schema.md  spec-md-schema.md  ss4-evidence-completeness-problem.md  verification-loop-remediation-2026-07.md  verification-matrix-report-schema.md  verification-surface-strategy.md
scripts/: verify_session_005_3.py  verify_session_006_2.py  verify_session_006_3.py  verify_session_007_2.py  verify_session_007_3.py  verify_session_008_1.py  verify_session_008_2.py  verify_session_009_2.py  verify_session_009_2_round2.py  verify_session_009_3.py  verify_session_009_3_round2.py  verify_session_009_3_round3.py  verify_session_010_1.py  verify_session_010_2.py  verify_session_010_3.py  verify_session_026_4.py  verify_session_026_6_a_result.json  verify_session_026_6_b_result.json  verify_session_026_7_result.json  verify_session_027_1_result.json  verify_session_027_2_result_a.json  verify_session_027_2_result_b.json  verify_session_027_2_result_c.json  verify_session_027_3.py  verify_session_027_3_result_a.json  verify_session_027_3_result_b.json  verify_session_027_3_result_c.json  verify_session_036_7.py
(+1928 files in other folders)
